# deep-reseach-clone

./: CLAUDE.md  README.md  docker-compose.yml  setup.sh  start.sh
backend/: README.md  langgraph.json  pyproject.toml  test-agent.ipynb
backend/examples/: cli_research.py
backend/src/api/: app.py
backend/src/config/: __init__.py  configuration.py
backend/src/graphs/: __init__.py  research_graph.py
backend/src/nodes/: __init__.py  base_node.py  finalization.py  query_generation.py  research.py
backend/src/prompts/: __init__.py  answer.py  helpers.py  query.py  research.py
backend/src/routers/: __init__.py  base_router.py  research_evaluation_router.py  web_research_router.py
backend/src/schemas/: __init__.py  schemas.py
backend/src/states/: __init__.py  overall.py  query.py  reflection.py  search.py
backend/src/utils/: __init__.py  citation_utils.py  date_utils.py  message_utils.py  url_utils.py
frontend/: .prettierrc  eslint.config.mjs  middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/home/: page.tsx
frontend/components/ui/: card.tsx  scroll-area.tsx  select.tsx  tabs.tsx  textarea.tsx
frontend/features/home/: activity-timeline.tsx  chat-messages-view.tsx  input-form.tsx  welcome-screen.tsx
